--- a/WPF/View/comps.xaml
+++ b/WPF/View/comps.xaml
@@ -21,7 +21,6 @@
             <RowDefinition Height="auto" MaxHeight="210"/>
             <RowDefinition Height="80"/>
         </Grid.RowDefinitions>
-        <Button Height="22" Width="21" HorizontalAlignment="Right" VerticalAlignment="Top"  Command="{Binding Back}" >X</Button>
         <TextBox x:Name="SearchtextBox" Text="{Binding FindText, UpdateSourceTrigger=PropertyChanged}" Grid.Row="0" HorizontalAlignment="Left" Height="23" Margin="10,35,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="265"/>
 
 
@@ -84,12 +83,16 @@
                             <Button x:Name="SetEmpbutton" Content="..." HorizontalAlignment="Left" Height="20" Width="20" Command="{Binding DataContext.SetEmp, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Page}}" CommandParameter= "{Binding SelectedItem}"/>
                     </StackPanel>
                 </StackPanel>
-                <Button Height="30" Content="SysInfoUpdate" Width="90"  Command="{Binding DataContext.SysInfoUpdate, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Page}}"></Button>
+                <StackPanel  VerticalAlignment="Bottom">
+                    <Button Margin="5,5,5,0" Height="25" Content="SysInfo" Width="90"  Command="{Binding DataContext.SysInfoUpdate, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Page}}"></Button>
+                </StackPanel>
+                
             </WrapPanel>
 
         </Border>
 
         <StackPanel Orientation="Horizontal" Grid.Row="3">
+            <Button Height="31" Width="100" HorizontalAlignment="Right"  Command="{Binding Back}" Visibility="{Binding SelectionMode, Converter={StaticResource BooleanToVisibilityConverter}}">Назад</Button>
             <Button x:Name="Savebutton"  Content="Сохранить" HorizontalAlignment="Left" Height="31" Width="100" Command="{Binding Save}"/>
             <Button x:Name="Newbutton" Content="Создать" HorizontalAlignment="Left" Height="31" Width="100" Command="{Binding Add}"/>
             <Button x:Name="Deletebutton" Content="Удалить" HorizontalAlignment="Left" Height="31" Width="100" Command="{Binding Delete}" CommandParameter= "{Binding ElementName=empGrid, Path=SelectedItem}"/>
