--- a/WPF/View/MainWindow.xaml
+++ b/WPF/View/MainWindow.xaml
@@ -14,15 +14,16 @@
 
         <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Hidden">
             <StackPanel>
-                <Button Content="Сотрудники" Click="Button_Click" />
-                <Button Content="Компьютеры" Click="Button_Click_1" />
-                <Button Content="Мониторы" />
-                <Button Content="Принтеры" />
-                <Button x:Name="btnDeps" Content="Отделы" Click="btnDeps_Click" />
-                <Button x:Name="btnPoss" Content="Должности" Click="btnPoss_Click" />                
+                <Button Margin="5,1,5,1" Content="Сотрудники" Click="Button_Click" />
+                <Button Margin="5,1,5,1" Content="Компьютеры" Click="Button_Click_1" />
+                <Button Margin="5,1,5,1" Content="Мониторы" />
+                <Button Margin="5,1,5,1" Content="Принтеры" />
+                <Button Margin="5,1,5,1" x:Name="btnDeps" Content="Отделы" Click="btnDeps_Click" />
+                <Button Margin="5,1,5,1" x:Name="btnPoss" Content="Должности" Click="btnPoss_Click" />
+                <Button Margin="5,1,5,1" x:Name="btnSettings" Content="Настройки" Click="btnSettings_Click"/>
             </StackPanel>
         </ScrollViewer>
 
-        <Frame NavigationUIVisibility="Hidden"  x:Name="MainFrame" Grid.Column="1" Background="#CCCCCC"/>
+        <Frame Padding="0,0,0,0" NavigationUIVisibility="Hidden"  x:Name="MainFrame" Grid.Column="1" Background="#CCCCCC"/>
     </Grid>
 </Window>
