--- a/WPF/View/poss.xaml
+++ b/WPF/View/poss.xaml
@@ -10,6 +10,10 @@
 
     <Page.Resources>
         <root:BoolToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <Style x:Key="SP_Controls">
+            <Setter Property="Control.Margin" Value="1,3,1,3"></Setter>
+        </Style>
+
     </Page.Resources>
 
     <Page.DataContext>
@@ -22,7 +26,6 @@
             <RowDefinition Height="auto" MaxHeight="210"/>
             <RowDefinition Height="80"/>
         </Grid.RowDefinitions>
-        <Button Height="22" Width="21" HorizontalAlignment="Right" VerticalAlignment="Top"  Command="{Binding Back}" >X</Button>
         <TextBox x:Name="SearchtextBox" Text="{Binding FindText, UpdateSourceTrigger=PropertyChanged}" Grid.Row="0" HorizontalAlignment="Left" Height="23" Margin="10,35,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="265"/>
 
 
@@ -48,16 +51,15 @@
 
         <Border Grid.Row="2" x:Name="EditForm" Visibility="{Binding EditMode, Converter={StaticResource BooleanToVisibilityConverter}}">
             <WrapPanel  DataContext="{Binding ElementName=Grid, Path=SelectedItem}">
-                <StackPanel>
+                <StackPanel Style="{StaticResource SP_Controls}">
                     <TextBlock FontSize="10" Margin="5,0,0,0"  HorizontalAlignment="Left" VerticalAlignment="Bottom">Нименование</TextBlock>
-                    <TextBox Padding="1" Width="130" Margin="5,0,0,0" Text="{Binding Path=Name}"></TextBox>
+                    <TextBox Padding="1" Width="auto" Margin="5,0,0,0" Text="{Binding Path=Name}"></TextBox>
                 </StackPanel>
             </WrapPanel>
         </Border>
 
         <StackPanel Orientation="Horizontal" Grid.Row="3">
             <Button Height="31" Width="100" HorizontalAlignment="Right"  Command="{Binding Back}" Visibility="{Binding SelectionMode, Converter={StaticResource BooleanToVisibilityConverter}}">Назад</Button>
-            <!--<Button x:Name="Selectbutton"  Content="Выбрать" HorizontalAlignment="Left" Height="31" Width="100" Command="{Binding Select}" Visibility="{Binding SelectionMode, Converter={StaticResource BooleanToVisibilityConverter}}"/>-->
             <Button x:Name="Savebutton"  Content="Сохранить" HorizontalAlignment="Left" Height="31" Width="100" Command="{Binding Save}"/>
             <Button x:Name="Editbutton"  Content="Редактировать" HorizontalAlignment="Left" Height="31" Width="102" Command="{Binding Edit}"/>
             <Button x:Name="Newbutton" Content="Создать" HorizontalAlignment="Left" Height="31" Width="100" Command="{Binding Add}"/>
