--- a/WPF/View/monitor.xaml
+++ b/WPF/View/monitor.xaml
@@ -38,8 +38,8 @@
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
-                    <DataGridTextColumn Binding="{Binding Name}" Header="NetName" Width="Auto" />
-                    <DataGridTextColumn Binding="{Binding EmpName}" Header="Пользователь" Width="Auto" />
+                    <DataGridTextColumn Binding="{Binding Name, Mode=OneWay}" Header="NetName" Width="Auto" />
+                    <DataGridTextColumn Binding="{Binding Emp.FIO, Mode=OneWay}" Header="Пользователь" Width="Auto" />
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
