--- a/WPF/View/dicdata.xaml
+++ b/WPF/View/dicdata.xaml
@@ -3,13 +3,23 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:System="clr-namespace:System;assembly=mscorlib"      
       xmlns:local="clr-namespace:WPF.View"
+      xmlns:BL="clr-namespace:BL;assembly=BL"
       xmlns:root="clr-namespace:WPF"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
         Title="MainWindow"  Background="White" KeepAlive="{Binding EditMode}">
 
     <Page.Resources>
+        <ObjectDataProvider x:Key="dataFromEnum" MethodName="GetValues"
+                            ObjectType="{x:Type System:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="BL:Dic"/>
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+
+
         <root:BoolToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
         <Style x:Key="SP_Controls">
             <Setter Property="Control.Margin" Value="1,3,1,3"></Setter>
@@ -23,6 +33,8 @@
             <RowDefinition Height="auto" MaxHeight="210"/>
             <RowDefinition Height="80"/>
         </Grid.RowDefinitions>
+        <ComboBox Height="24" Width="150" HorizontalAlignment="Right" VerticalAlignment="Top"  ItemsSource="{Binding Source={StaticResource dataFromEnum}}"
+                  SelectedItem="{Binding Path=CurrentDic}"  Visibility="{Binding MultiDicMode, Converter={StaticResource BooleanToVisibilityConverter}}" />
         <TextBox x:Name="SearchtextBox" Text="{Binding FindText, UpdateSourceTrigger=PropertyChanged}" Grid.Row="0" HorizontalAlignment="Left" Height="23" Margin="10,35,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="265"/>
         <Grid Grid.Row="1" >
             <DataGrid SelectedValue="{Binding Selected,Mode=TwoWay}"  CanUserAddRows="False" ScrollViewer.CanContentScroll="True"  AutoGenerateColumns="False" x:Name="Grid" HorizontalAlignment="Left" ItemsSource = "{Binding Path=EntityList, Mode=OneWay}">
