--- a/WPF/View/MainWindow.xaml
+++ b/WPF/View/MainWindow.xaml
@@ -18,10 +18,12 @@
                 <Button Margin="5,1,5,1" Content="Компьютеры" Click="Button_Click_1" />
                 <Button Margin="5,1,5,1" Content="Мониторы" Click="Button_Click_2" />
                 <Button Margin="5,1,5,1" Content="Принтеры" />
+                <Button Margin="5,1,5,1" Content="Разное" Click="Button_Click_3" />                
                 <Button Margin="5,1,5,1" x:Name="btnDeps" Content="Отделы" Click="btnDeps_Click" />
                 <Button Margin="5,1,5,1" x:Name="btnPoss" Content="Должности" Click="btnPoss_Click" />
                 <Button Margin="5,1,5,1" x:Name="btnSettings" Content="Настройки" Click="btnSettings_Click"/>
                 <Button Margin="5,1,5,1" x:Name="btnTest" Content="Словари" Click="btnTest_Click"/>
+                <Button Margin="5,1,5,1" x:Name="btnMc" Content="МЦ" Click="btnMc_Click"/>
             </StackPanel>
         </ScrollViewer>
         <Frame Padding="0,0,0,0" NavigationUIVisibility="Hidden"  x:Name="MainFrame" Grid.Column="1" Background="#CCCCCC"/>
