--- a/WPF/View/misc.xaml
+++ b/WPF/View/misc.xaml
@@ -1,13 +1,13 @@
-﻿<Page x:Class="WPF.View.monitor"
+﻿<Page x:Class="WPF.View.misc"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:WPF.View"
-      xmlns:root="clr-namespace:WPF"      
+      xmlns:root="clr-namespace:WPF"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
-       Title="monitor" Background="White" KeepAlive="{Binding EditMode}">
+      Title="comp" Background="White" KeepAlive="{Binding EditMode}">
 
     <Page.Resources>
         <root:BoolToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
@@ -18,7 +18,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="80"/>
             <RowDefinition Height="*" />
-            <RowDefinition Height="auto" MaxHeight="210"/>
+            <RowDefinition Height="auto" MaxHeight="250"/>
             <RowDefinition Height="80"/>
         </Grid.RowDefinitions>
         <TextBox x:Name="SearchtextBox" Text="{Binding FindText, UpdateSourceTrigger=PropertyChanged}" Grid.Row="0" HorizontalAlignment="Left" Height="23" Margin="10,35,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="265"/>
@@ -38,21 +38,22 @@
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
-                    <DataGridTextColumn Binding="{Binding Model, Mode=OneWay}" Header="Модель" Width="Auto" />
-                    <DataGridTextColumn Binding="{Binding Emp.FIO, Mode=OneWay}" Header="Пользователь" Width="Auto" />
+                    <DataGridTextColumn Binding="{Binding InvNum}" Header="Инв.№" Width="Auto" />
+                    <DataGridTextColumn Binding="{Binding Dsc}" Header="Описание" Width="Auto" />
+                    <DataGridTextColumn Binding="{Binding Emp.FIO}" Header="У кого" Width="Auto" />
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
         <Border Grid.Row="2" x:Name="EditForm" Visibility="{Binding EditMode, Converter={StaticResource BooleanToVisibilityConverter}}">
             <WrapPanel  DataContext="{Binding ElementName=Grid, Path=SelectedItem}">
                 <StackPanel>
-                    <TextBlock FontSize="10" Margin="5,0,0,0"  HorizontalAlignment="Left" VerticalAlignment="Bottom">Модель</TextBlock>
-                    <TextBox Padding="1" Width="auto" Margin="5,0,0,0" Text="{Binding Path=Model}"></TextBox>
+                    <TextBlock FontSize="10" Margin="5,0,0,0"  HorizontalAlignment="Left" VerticalAlignment="Bottom">Описание</TextBlock>
+                    <TextBox Padding="1" Width="auto" Margin="5,0,0,0" Text="{Binding Path=Dsc}"></TextBox>
                 </StackPanel>
                 <StackPanel>
                     <TextBlock FontSize="10" Margin="5,0,0,0"  HorizontalAlignment="Left" VerticalAlignment="Bottom">Инв.№</TextBlock>
                     <TextBox Padding="1" Width="auto" Margin="5,0,0,0" Text="{Binding Path=InvNum}"></TextBox>
-                </StackPanel>
+                </StackPanel>                
                 <StackPanel>
                     <TextBlock FontSize="10" Margin="5,0,0,0"  HorizontalAlignment="Left" VerticalAlignment="Bottom">Пользователь</TextBlock>
                     <StackPanel Orientation="Horizontal" >
@@ -60,13 +61,7 @@
                         <Button x:Name="SetEmpbutton" Content="..." HorizontalAlignment="Left" Height="20" Width="20" Command="{Binding DataContext.SetEmp, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Page}}" CommandParameter= "{Binding SelectedItem}"/>
                     </StackPanel>
                 </StackPanel>
-                <StackPanel>
-                    <TextBlock FontSize="10" Margin="5,0,0,0"  HorizontalAlignment="Left" VerticalAlignment="Bottom">Диагональ</TextBlock>
-                    <StackPanel Orientation="Horizontal" >
-                        <TextBox Padding="1" Width="auto" Margin="5,0,0,0" Text="{Binding Path=Diagonal.Name,Mode=OneWay}"></TextBox>
-                        <Button x:Name="SetDiagbutton" Content="..." HorizontalAlignment="Left" Height="20" Width="20" Command="{Binding DataContext.SetDiagonal, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Page}}" CommandParameter= "{Binding SelectedItem}"/>
-                    </StackPanel>
-                </StackPanel>
+
             </WrapPanel>
 
         </Border>
